--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,18 @@
 
 
 	</dependencies>
-
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>1.8</source> <!-- Update to Java 8 or later -->
+                <target>1.8</target> <!-- Update to Java 8 or later -->
+            </configuration>
+        </plugin>
+        <!-- Other plugins -->
+    </plugins>
+</build>
 </project>
