--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
                 <target>1.8</target> <!-- Update to Java 8 or later -->
             </configuration>
         </plugin>
+           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <parallel>methods</parallel>
+                <threadCount>10</threadCount>
+                <suiteXmlFiles>
+                    <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
         <!-- Other plugins -->
     </plugins>
 </build>
