--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
                 <parallel>methods</parallel>
                 <threadCount>10</threadCount>
                 <suiteXmlFiles>
-                    <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
